# EtherEnigma_agent

./: ._pyproject.toml  ._run.py  RiddleGame.json  agents.py  app.py  package-lock.json  pyproject.toml  replit_zip_error_log.txt  wallet.py  wallet_seed.json  wallet_seed.py
backend/: db.sqlite3  wallet_seed.json
backend/agent/: agents.py  urls.py  views.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
